# retarded_cp

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  README.md  cmake_install.cmake  cmd.sh  compile_commands.json  nf.cpp  pyproject.toml  template.cpp
.cph/: .A_A_Substring.cpp_b9a888b7071a41a7762ea87d04145e68.prob  .A_Difficult_Contest.cpp_4566eb5f925ed1a6a7f375491367a4d8.prob  .A_Vacation_Validation.cpp_fb70f4a149ab72b0ab67b3541dd94128.prob  .Array_Halves.cpp_7743c573c39a82134aa59fb658a076f2.prob  .B_1_D_Akari.cpp_3fdb73907a3e1392515b912415545772.prob  .B_Left_and_Down.cpp_e589d3b4611f7169e7712cdd14c632b3.prob  .B_Search_and_Delete.cpp_5817916eb4199bcc7096184d7e509006.prob  .Bella_ciao.cpp_c748a4d3c1c0fa1f12ad4a6d107afcd1.prob  .C_Ball_in_Berland.cpp_eeb949a11fbbbb4bce73797c2a8ae6b0.prob  .C_Concat_X_th.cpp_7d2717aa8a970396b4cccf464910f0fb.prob  .C_Count_Good_Numbers.cpp_121300bfee85e2ea8475f7feb14f5d74.prob  .C_Distance_Indicators.cpp_e4540209146536f2367d7ba7c5ecc51f.prob  .C_I_Will_Definitely_Make_It.cpp_bb0af7b6c12029af17fca76777998219.prob  .D_Good_Tuple_Problem.cpp_fe0372d56eacfdf0ba91520edb6abba9.prob  .D_Match_Mod_Minimize_2.cpp_4190c57166f31ee273a51e464fcc3baf.prob  .D_Segments_Covering.cpp_c1fe0dc4035c8fe35ad986cc2ccb142e.prob  .D_Takahashi_s_Expectation.cpp_b0ab3841e0c37af576831fee876db020.prob  .E_A_Path_in_A_Dictionary.cpp_589f336a21ac6ba35648091734497659.prob  .E_Development.cpp_974ecf185c3679cab1606dc7b92d7cf3.prob  .F_Apples.cpp_eeee3ae0da9f1ba38da23b6bbee1356c.prob  (+4 more)
Algorithms/: binary_exponentiation.cpp  (+6 more)
src/: main.rs
(+430 files in other folders)
